--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
     padding: 20px;
     background-repeat: no-repeat;
-    background-size: fixed;
+    background-size: cover;
   }
 
   h1 {
@@ -18,6 +18,9 @@ body {
   #command-input {
     border-radius: 7px;
     padding: 10px;
+    width: 1178px;
+    color: black;
+    background-color: rgba(0, 0, 0, 0.432);
     overflow-y: scroll;
     -ms-overflow-style: none;
   }
@@ -41,7 +44,7 @@ body {
     overflow-y: scroll;
     scrollbar-width: none;
     -ms-overflow-style: none;
-    background-color:       rgba(0, 0, 0, 0.3);
+    background-color:       rgba(0, 0, 0, 0.308);
     background-size: cover;
     position: fixed;
     top: 0;
@@ -61,7 +64,7 @@ body {
     overflow-y: scroll;
     scrollbar-width: none;
     -ms-overflow-style: none;
-    background-color: rgba(59, 59, 59, 0.842);
+    background-color: rgba(0, 0, 0, 0.63);
   }
 
   #credits {
@@ -77,11 +80,11 @@ body {
   #logs {
     border-radius: 7px;
     padding: 10px;
-    height: 400px;
+    height: 500px;
     overflow-y: scroll;
     scrollbar-width: none;
     -ms-overflow-style: none;
-    background-color: rgba(63, 63, 63, 0.9);
+    background-color: rgba(0, 0, 0, 0.452);
   }
 
   #logs::-webkit-scrollbar {
