--- a/public/style.css
+++ b/public/style.css
@@ -11,8 +11,11 @@
     background-attachment: fixed;
   }
 
-  h1 {
-    text-align: center;
+  h3 {
+    text-align: left;
+    margin-top: 17px;
+    margin-right: 10px;
+    font-size: 20px;
   }
 
   #command-input {
@@ -50,20 +53,20 @@
     background-color: rgba(0, 0, 0, 0.308);
     background-size: cover;
     position: fixed;
-    top: 0;
+    top: 0px;
     left: 0;
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 100%;
+    height:  100%; 
     box-sizing: border-box;
   }
 
   #main-middle {
-    max-height: 80vh;
+    max-height: 700px;
     max-width: 1200px;
     width: 100%;
-    margin: 0 auto;
+    margin: 70px auto 0;
     padding: 20px;
     border-radius: 7px;
     align-content: space-evenly;
@@ -73,7 +76,6 @@
     background-color: rgba(0, 0, 0, 0.63);
     box-sizing: border-box;
   }
-
   #logs {
     border-radius: 7px;
     padding: 10px;
@@ -141,6 +143,14 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    height: 60px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.63);
   }
 
   button {
@@ -148,7 +158,7 @@
     margin: 5px;
     border: none;
     border-radius: 7px;
-    background-color: rgba(0, 0, 0, 0.63);
+    background-color: rgba(0, 0, 0, 0.02);
     color: #ecf0f1;
     cursor: pointer;
     font-family: "Comfortaa", sans-serif;
