updated more stuff

--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
     font-family: "Comfortaa", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
-    background-image: url("/images/bg.png");
+    background-color: #2a2d2e;
     color: #ecf0f1;
     margin: 0;
     padding: 20px;
